@@ -35,6 +35,8 @@
 #  
 ##########################################################################
 
+import weakref
+
 import IECore
 
 import Gaffer
@@ -49,6 +51,45 @@ class NodeEditor( GafferUI.NodeSetEditor ) :
 		GafferUI.NodeSetEditor.__init__( self, self.__column, scriptNode, **kw )
 		
 		self._updateFromSet()
+	
+	## Ensures that the specified node has a visible NodeEditor editing it, creating
+	# one if necessary.
+	## \todo User preferences for whether these are made floating, embedded, whether
+	# they are reused etc. This class should provide the behaviour, but the code for
+	# linking it to preferences should be in a startup file.
+	## \todo Consider how this relates to draggable editor tabs and editor floating
+	# once we implement that in CompoundEditor - I suspect that acquire will become a method
+	# on CompoundEditor instead at this point.
+	@classmethod
+	def acquire( cls, node ) :
+	
+		script = node.scriptNode()
+		scriptWindow = GafferUI.ScriptWindow.acquire( script )
+		
+		for editor in scriptWindow.getLayout().editors( type = GafferUI.NodeEditor ) :
+			if node.isSame( editor._lastAddedNode() ) :
+				return editor
+		
+		childWindows = scriptWindow.childWindows()
+		for window in childWindows :
+			if hasattr( window, "nodeEditor" ) :
+				if node in window.nodeEditor.getNodeSet() :
+					window.setVisible( True )
+					return window.nodeEditor
+				
+		window = GafferUI.Window( "Node Editor", borderWidth = 8 )
+		window.nodeEditor = GafferUI.NodeEditor( script )
+		window.nodeEditor.setNodeSet( Gaffer.StandardSet( [ node ] ) )
+		window.setChild( window.nodeEditor )
+		
+		window.__closedConnection = window.closedSignal().connect( IECore.curry( cls.__deleteWindow, weakref.ref( window ) ) )
+		window.__nodeParentChangedConnection = node.parentChangedSignal().connect( IECore.curry( cls.__deleteWindow, weakref.ref( window ) ) )
+		
+		window.setVisible( True )
+		
+		scriptWindow.addChildWindow( window )
+		
+		return window.nodeEditor
 						
 	def __repr__( self ) :
 
@@ -70,5 +111,14 @@ class NodeEditor( GafferUI.NodeSetEditor ) :
 		frame = GafferUI.Frame( borderStyle=GafferUI.Frame.BorderStyle.None )
 		self.__column.append( frame, expand=True )
 		frame.setChild( GafferUI.NodeUI.create( node ) )
+		
+	@staticmethod
+	def __deleteWindow( windowWeakRef, *unusedArgs ) :
+	
+		window = windowWeakRef()
+		if window is None :
+			return
+			
+		window.parent().removeChild( window )
 				
 GafferUI.EditorWidget.registerType( "NodeEditor", NodeEditor )
